@@ -94,6 +94,7 @@ Major new features in 2.8 release
 All:
 
 - Added wxSizerFlags::Shaped() and FixedMinSize() methods
+- Added wxCSConv::IsOk() (Manuel Martin)
 - Added wxDateTime::GetDateOnly()
 - Made wxTextFile work with unseekable files again (David Hart)
 
